
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 JUL 12a
  * in model/chem/_C2H4_Air_Plasma_30s/chem.c
    - implemented TEMIN, TEMAX, TEFROMEOVERN
    - in _kfit4(), fixed a bug: kf shouldn't be divided by calA
  * in .makefile-header-default
    - took away -DNDEBUG from the default C and linker flags: this fixes odd bugs we were getting
      recently with gcc and mpicc when using compiler optimization -O1 or higher
    

2022 JUL 10a
  * in bin/*.wrp
    - upgraded the control files so they can be run without change with the latest version
      of CFDWARP
  

2022 JUl 09a
  * in model/transport/_Gupta-Yos/transport.c
    - fixed a bug related to yesterday's change: 30000 K should be OMEGATMAXCLIP in _piOmega11()
    

2022 JUL 08b
  * in model/transport/_Gupta-Yos/transport.c
    - in _piOmega11() and _piOmega22(), removed the clipping
      of the temperature that prevented it to be above 30000K. Now, the polynomials are used
      for temperatures as low as OMEGATMAXCLIP (which is set to 1e9K).
  

2022 JUL 08a
  * in model/transport/_Dixon-Lewis/transport.c
    - in find_nuk_eta_kappak_muk(), fixed a bug: need to make sure there are some #ifdel speceminus
      surrounding code with speceminus. This gets rids of compilation errors when using a chemical
      solver without electrons
  * in model/share/transport_share.c
    - in adjust_nue_given_nui(), moved ``long k'' to within #ifdef speceminus
  * in model/fluid/_Navier-Stokes_perfect/fluid.c
    - in  write_model_fluid_template(), read_model_fluid_actions(), _eta_from_T(), made 
      modifications so that in the control file eta_ref is renamed to eta, eta_ref_T is renamed to 
      eta_T0. Also made modications so that ETAMODEL is set to ETAMODEL_CONSTANT by default rather 