@@ -76,6 +76,12 @@
 
 }
 
+
+{
+Setup taken from:
+
+Hyungrok Do, Seong-kyun Im, Mark A. Cappelli, M. Godfrey Mungal, Plasma assisted flame ignition of supersonic flows over a flat wall, Combustion and Flame Vol. 157, 2010, Pages 2298–2305
+}
  
 
 is=1;
